k8strain3/config-配置管理/kyverno/kyverno-require-label.yaml
apiVersion: kyverno.io/v1 
kind: ClusterPolicy 
metadata:
  name: require-label
spec:
#  validationFailureAction: enforce
  rules:
  - name: check-for-labels
    match: 
     resources:
       kinds:
       - Pod
    validate:
      message: "label 'kyverno' is required "
      pattern: 
        metadata: 
          labels:
            kyverno: "?*"
